Fix record detail page table color in dark mode

--- a/packages/ui-default/theme/dark.styl
+++ b/packages/ui-default/theme/dark.styl
@@ -405,3 +405,6 @@ $hover-background-color = #424242
 
   &.hasjs .collapsed #status:not([data-status="7"]) .compiler-text-mask
     background-image: linear-gradient(to bottom, transparent, #000000 25px)
+
+  .page--record_detail .subtask
+    background-color: #000 !important
